tests/fixtures/LatestTests/VariableDeclarationTests/errors/bool_addition.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
var x:bool = true + false

